# SPDX-License-Identifier: GPL-3.0-or-later

AUTOMAKE_OPTIONS = subdir-objects
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

SUBDIRS = \
    adaptive_resortable_list \
    avl \
    buffer \
    clocks \
    completion \
    config \
    dictionary \
    ebpf \
    eval \
    json \
    health \
    locks \
    log \
    onewayalloc \
    popen \
    procfile \
    simple_pattern \
    socket \
    statistical \
    storage_number \
    threads \
    url \
    worker_utilization \
    tests \
    $(NULL)

dist_noinst_DATA = \
    README.md \
    $(NULL)
