# SPDX-License-Identifier: GPL-3.0-or-later

AUTOMAKE_OPTIONS = subdir-objects
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

SUBDIRS = \
    adaptive_resortable_list \
    aral \
    avl \
    buffer \
    buffered_reader \
    clocks \
    completion \
    config \
    datetime \
    dictionary \
    ebpf \
    eval \
    facets \
    functions_evloop \
    json \
    july \
    health \
    line_splitter \
    locks \
    log \
    onewayalloc \
    popen \
    procfile \
    simple_pattern \
    socket \
    statistical \
    storage_number \
    string \
    threads \
    url \
    uuid \
    worker_utilization \
    tests \
    $(NULL)

dist_noinst_DATA = \
    README.md \
    $(NULL)
