MAINTAINERCLEANFILES= $(srcdir)/Makefile.in

dist_noinst_DATA = \
	$(NULL)

dist_noinst_SCRIPTS = \
	build.sh \
	makeself.sh \
	makeself-license.txt \
	setup-x86_64-static.sh \
	post-installer.sh \
	jobs/10-prepare-destination.install.sh \
	jobs/50-curl-7.53.1.install.sh \
	jobs/50-bash-4.4.install.sh \
	jobs/50-fping-4.0.install.sh \
	jobs/70-netdata-git.install.sh \
	jobs/99-makeself.install.sh \
	run-all-jobs.sh \
	install-or-update.sh \
	build-x86_64-static.sh \
	makeself-header.sh \
	makeself-help-header.txt \
	makeself.lsm \
	functions.sh \
	$(NULL)
