MAINTAINERCLEANFILES= $(srcdir)/Makefile.in

dist_node_DATA = \
	README.md \
	named.node.js \
	fronius.node.js \
	sma_webbox.node.js \
	snmp.node.js \
	$(NULL)

nodemodulesdir=$(nodedir)/node_modules
dist_nodemodules_DATA = \
	node_modules/netdata.js \
	node_modules/extend.js \
	node_modules/pixl-xml.js \
	node_modules/net-snmp.js \
	node_modules/asn1.js \
	$(NULL)

nodemodulesberdir=$(nodedir)/node_modules/ber
dist_nodemodulesber_DATA = \
	node_modules/ber/index.js \
	node_modules/ber/errors.js \
	node_modules/ber/reader.js \
	node_modules/ber/types.js \
	node_modules/ber/writer.js \
	$(NULL)
