#
# Copyright (C) 2015 Alon Bar-Lev <alon.barlev@gmail.com>
#
MAINTAINERCLEANFILES= $(srcdir)/Makefile.in

dist_plugins_DATA = \
	README.md \
	$(NULL)

dist_plugins_SCRIPTS = \
	alarm-email.sh \
	alarm-notify.sh \
	alarm-test.sh \
	cgroup-name.sh \
	cgroup-network-helper.sh \
	charts.d.dryrun-helper.sh \
	charts.d.plugin \
	fping.plugin \
	node.d.plugin \
	python.d.plugin \
	tc-qos-helper.sh \
	loopsleepms.sh.inc \
	$(NULL)
