# SPDX-License-Identifier: GPL-3.0-or-later

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

SUBDIRS = \
    checks.plugin \
    freebsd.plugin \
    idlejitter.plugin \
    cgroups.plugin \
    diskspace.plugin \
    nfacct.plugin \
    proc.plugin \
    tc.plugin \
    macos.plugin \
    plugins.d \
    statsd.plugin \
   	$(NULL)


dist_noinst_DATA = \
	README.md \
	$(NULL)
